# cpp-board

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
src/aplication/: Console.h  EventsHandler.cpp  EventsHandler.h  RenderContext.cpp  RenderContext.h  WindowContext.cpp  WindowContext.h
src/application/: EventsHandler.cpp  EventsHandler.h  RenderContext.cpp  RenderContext.h  WindowContext.cpp  WindowContext.h
src/application/modals/: ImguiContext.cpp  ImguiContext.h  ImguiModals.cpp  ImguiModals.h
src/logic/: Collider.cpp  Collider.h  GaltonSimulator.cpp  GaltonSimulator.h
src/models/: Ball.cpp  Ball.h  BallProps.h  ColliderProps.h  GaltonProps.h  types.cpp  types.h
src/utils/: vmath.cpp  vmath.h
